# eee

./: .env.example  .gitignore  README.md  docker-compose.yml  done.md  edu_agent.yaml.example  pyproject.toml  sessions.db-shm  sessions.db-wal  thesis.md
.edu_agent/weixin/: account.json
data/: cron_jobs.json
edu-platform/: .env.example  .gitignore  Backend_API.md  Dockerfile.rag-service  README.md  README_Architecture.md  docker-compose.yml  global.d.ts  instrumentation-node.ts  instrumentation.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
edu-platform/__tests__/: bind-credential-key.test.ts  bind-refresh.test.ts  change-password.test.ts  chat-b3-transform.test.ts  course-access.test.ts  course-share-code.test.ts  credential-code.test.ts  enrolled-courses-rag.test.ts  internal-course-rag-access.test.ts  materialService.preview-reconcile.test.ts  materialService.upload.test.ts  ragTask.test.ts  request-auth.test.ts
edu-platform/app/: globals.css  layout.tsx  page.tsx
edu-platform/components/: AppSidebar.tsx  ChatComponent.tsx  CourseChatDockview.tsx  CourseChatWorkspace.tsx  CourseMaterialList.tsx  CourseMaterialViewer.tsx  KnowledgeGraphPanel.tsx  MaterialPdfViewer.tsx  MaterialPreview.tsx  MaterialUpload.tsx  RetryMaterialIndexPopover.tsx
edu-platform/hooks/: useNotify.ts
edu-platform/lib/: admin.ts  agent-not-bound-error.ts  agentClient.ts  auth.ts  bind-challenge.ts  bind-credential-key.ts  captureElementToPngFile.ts  chatToolEmoji.ts  config.ts  cookies.ts  course-access-injector.ts  course-access.ts  course-rag-courses.ts  course-share-code.ts  credential-code.ts  internal-agent-user.ts  jwt.ts  markdownMath.ts  material-office.ts  material-storage-errors.ts  material-upload-allowed.ts  middleware-helpers.ts  minio.ts  password.ts  redis.ts  refresh-token.ts  request-auth.ts
edu-platform/prisma/: add_chunk_page_mappings.sql  migrate-cron-jobs.ts  schema.prisma  seed-mock-students.ts  seed.ts
edu-platform/scripts/: cron-worker.ts
implement_docs/: current.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  plan.md  prd.md
review_docs/: hermes_memory_gap.md  review_phase1.md  review_phase2.md  review_phase6.md  review_phase7.md  review_phase8.md  test_quality_audit.md
scripts/: create_lightrag_db.py  migrate_lightrag_to_edu_lightrag.py  test_llm.py
skills/: EDUCATOR.md  assignment_fixer.md  assignment_generator.md  assignment_planner.md  assignment_reviewer.md  concept_clarification.md  course_qa.md  multimodal_attachments.md  scaffolding.md  socratic.md
tests/: __init__.py
(+310 files in other folders)
