[project]
name = "rag-mvp"
version = "0.1.0"
description = "Multimodal RAG CLI powered by RAG-Anything, MinerU and Qwen API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "raganything[all]>=0.1.0",
    "mineru>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "huggingface-hub[hf-xet]>=0.36.2",
    "wikipedia-mcp",
    "pytest-timeout>=2.4.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.14.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
rag = "rag_mvp.cli:cli"
parse = "rag_mvp.cli:parse"
mindmap = "rag_mvp.mindmap_cli:cli"
edu = "edu_agent.cli:cli"
edu-gateway = "edu_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mvp", "src/edu_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[tool.uv.sources]
wikipedia-mcp = { git = "https://github.com/rudra-ravi/wikipedia-mcp.git" }
# no special overrides; all packages from PyPI

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
